test/cli/test/manifests/verify-signature/kyverno-test.yaml
name: yaml-verification
policies:
- policies.yaml
resources:
- resources.yaml
results:
- kind: Service
  policy: validate-yaml
  resources:
  - test-service
  result: fail
  rule: validate-yaml
- kind: Service
  policy: validate-yaml
  resources:
  - test-service2
  result: pass
  rule: validate-yaml
- kind: Service
  policy: validate-yaml
  resources:
  - test-service3
  result: pass
  rule: validate-yaml-multi-sig
