test/cli/test/manifests/verify-signature/policies.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-yaml
spec:
  admission: true
  background: false
  failurePolicy: Fail
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Service
          name: test*
    name: validate-yaml
    validate:
      manifests:
        attestors:
        - count: 1
          entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                -----END PUBLIC KEY-----
              signatureAlgorithm: sha256
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
                -----END PUBLIC KEY-----
              signatureAlgorithm: sha256
        dryRun: {}
  - match:
      any:
      - resources:
          kinds:
          - Service
          name: test*
    name: validate-yaml-multi-sig
    validate:
      manifests:
        attestors:
        - entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                -----END PUBLIC KEY-----
              signatureAlgorithm: sha256
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
                -----END PUBLIC KEY-----
              signatureAlgorithm: sha256
        dryRun: {}
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
